--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top" style="background-color: #1b1200">
       <div class="container">
-        <a class="navbar-brand" href="try.html">Vigo Agatho</a>
+        <a class="navbar-brand" href="index.html">Vigo Agatho</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
