--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             Aku pada dasarnya just an ordinary college student yang bisa "main" Premiere Pro dan juga After Effects. Berkesinambungan dengan 2 hal diatas aku juga punya hobi bikin short movie bareng temen-temenku.
           </div>
           <div class="col-md-4 mb-3">
-            Nggak sampe situ aja! sesuai katanya "Tect Enthusiast" aku juga sering ngulik teknologi-teknologi pembangunan aplikasi, dan aku jatuh hati banget sama framework FLutter. Scroll terus buat lihat proyekan ku ya!
+            Nggak sampe situ aja! sesuai katanya "Tect Enthusiast" aku juga sering ngulik teknologi-teknologi pembangunan aplikasi, dan aku jatuh hati banget sama framework Flutter. Scroll terus buat lihat proyekan ku ya!
           </div>
         </div>
       </div>
