--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section class="jumbotron text-center">
       <img src="img/IMG_20211002_095516_284.webp" alt="My Picture" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Vigo Agatho</h1>
-      <p class="lead">Student | Video Content Creator | Tech Enthusiast</p>
+      <p class="lead">Student | Video Content Creator | IT Enthusiast</p>
       <p class="fst-italic">"Harm judgment aren't really necessary, as long as it doesn't come from God."</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
@@ -84,13 +84,13 @@
         <div class="row justify-content-center fs-5">
           <div class="col-md-4 mb-3">
             Halo khalayak! Kenalin! Aku Vigo Agatho, kalian bisa panggil aku Vigo untuk ocassion formal, tapi kalau udah deket panggil aja pigo atau pigoy! Aku sekarang kuliah di Universitas Tanjungpura Pontianak, Prodi Sistem Informasi,
-            lagi jalanin smester 10 bjir tua.
+            lagi di masa akhir-akhir perkuliahan.
           </div>
           <div class="col-md-4 mb-3">
             Aku pada dasarnya just an ordinary college student yang bisa "main" Premiere Pro dan juga After Effects. Berkesinambungan dengan 2 hal diatas aku juga punya hobi bikin short movie bareng temen-temenku.
           </div>
           <div class="col-md-4 mb-3">
-            Nggak sampe situ aja! sesuai katanya "Tect Enthusiast" aku juga sering ngulik teknologi-teknologi pembangunan aplikasi, dan aku jatuh hati banget sama framework Flutter. Scroll terus buat lihat proyekan ku ya!
+            Nggak sampe situ aja! sesuai katanya "IT Enthusiast" aku juga sering ngulik teknologi-teknologi pembangunan aplikasi, dan aku jatuh hati banget sama framework Flutter. Scroll terus buat lihat proyekan ku ya!
           </div>
         </div>
       </div>
@@ -180,7 +180,7 @@
               <div class="card-body">
                 <h5 class="card-title">OPETS</h5>
                 <p class="card-text">
-                  Platform web yang jadi tempat transaksi grooming hewan, pertama kali nyentuh ReactJS ternyata cukup menyenangkan. Karena ini proyek tim jadi nggak aku cantumin yah link nya ga enak sama yang lain mwehehehee
+                  Platform web yang jadi tempat transaksi grooming hewan, pertama kali nyentuh ReactJS ternyata cukup menyenangkan. Karena ini proyek tim jadi nggak aku cantumin yah link nya ga enak sama yang lain.
                 </p>
                 <a href="" class="btn btn-primary" target="_blank">Lihat Project</a>
               </div>
